<resources>
    <string name="app_name">WKQuiz</string>
    <string name="app_prefs_file">com.ruzaaniapps.wkquiz.DefaultPrefsFile</string>
    <string name="app_prefs_user_api_key">user_api_key</string>
    <string name="app_prefs_onyomi_script">onyomi_script</string>
    <string name="app_prefs_hiragana">hiragana</string>
    <string name="app_prefs_katakana">katakana</string>
    <string name="app_prefs_kanji_columns">kanji_columns</string>
    <string name="app_prefs_see_all_levels">see_all_levels</string>
    <string name="app_prefs_all_levels_true">Yes</string>
    <string name="app_prefs_all_levels_false">No</string>
    <string name="double_click_exit">Press BACK once again to exit!</string>
    <string name="error_url">There was an error. Please verify your API key</string>
    <string name="login_text">Enter your API key:</string>
    <string name="login_hint">API Key</string>
    <string name="login_button">Sing In</string>
    <string name="navigation_bar_home">Home</string>
    <string name="navigation_bar_kanji">Kanji</string>
    <string name="navigation_bar_vocabulary">Vocabulary</string>
    <string name="navigation_bar_settings">Settings</string>
    <string name="settings_onyomi_text">Onyomi Script</string>
    <string name="settings_onyomi_hint">It changes the script of kanji onyomi readings</string>
    <string name="settings_columns_text">Kanji Columns</string>
    <string name="settings_columns_hint">Sets the number of columns in the kanji table</string>
    <string name="settings_all_kanji_text">Show all Kanji</string>
    <string name="settings_all_kanji_hint">Shows kanji above your level</string>
    <string name="settings_share_app_text">Share this app</string>
    <string name="settings_share_app_hint">You know what this does, so share it!</string>
</resources>
