<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".SettingsFrag">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/settingsOnyomiFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/settingsOnyomiText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_onyomi_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/settingsOnyomiHint"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/settingsOnyomiHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_onyomi_hint"
            app:layout_constraintTop_toBottomOf="@id/settingsOnyomiText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/settingsOnyomiValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_prefs_hiragana"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/settingsColumnsFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/settingsColumnsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_columns_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/settingsColumnsHint"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/settingsColumnsHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_columns_hint"
            app:layout_constraintTop_toBottomOf="@id/settingsColumnsText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/settingsColumnsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/settingsAllKanjiFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/settingsAllKanjiText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_all_kanji_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/settingsAllKanjiHint"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/settingsAllKanjiHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_all_kanji_hint"
            app:layout_constraintTop_toBottomOf="@id/settingsAllKanjiText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/settingsAllKanjiValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/settingsShareAppFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/settingsShareAppText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_share_app_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/settingsShareAppHint"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/settingsShareAppHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_share_app_hint"
            app:layout_constraintTop_toBottomOf="@id/settingsShareAppText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>